[package]
name = "fractal-generator-wasm"
version = "0.1.0"
authors = ["Radoslaw Madzia <radoslawmadzia@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
image = "0.24.7"

[dependencies.web-sys]
version = "0.3"
features = [
        "console",
        "ImageData",
        "Window"
    ]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
